# conway-technical

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  gh_client_example_usage.py  main.py  pyproject.toml  pytest.ini  run_service.py  test_datetime_serialization.py  test_integration.py  test_multiforest.py  test_pg_connection.py  test_service.py  verify_schema.py
alembic/: env.py
config/: known_bots.json
examples/: analyze_gharchive.py  detect_anomalies_rrcf.py  realtime_anomaly_detection.py  rrcf_malicious_detection.py
github_client/: __init__.py  client.py  config.py  enriched_models.py  enrichment_cache.py  exceptions.py  feature_extractor.py  gharchive.py  graphql_client.py  models.py  utils.py
github_client/tests/: conftest.py
migrations/: alembic.ini
migrations/alembic/: env.py
scripts/: detect_anomalies_rrcf.py  reset_db.py
service/: __init__.py  anomaly_detector.py  anomaly_detector_base.py  app.py  config.py  database.py  enhanced_summarizer.py  enrichment_service.py  poller.py  queue.py  sse_models.py  summarizer.py  worker.py
tests/: conftest.py
tests/integration/: test_event_parsing.py  test_github_api.py  test_service.py
tests/unit/: test_client.py  test_database_models.py  test_enhanced_summarizer.py  test_enrichment_cache.py  test_enrichment_service.py  test_feature_extractor_comprehensive.py  test_gharchive.py  test_graphql_client.py  test_integration.py  test_models.py  test_multiforest.py  test_queue_operations.py  test_sse_models.py  test_tuning.py  test_velocity_features.py  test_velocity_fix.py
(+9 files in other folders)
