[project]
name = "conway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "anthropic>=0.72.0",
    "fastapi[standard]>=0.120.3",
    "httpx>=0.28.1",
    "newrrcf>=0.5.0",
    "numpy>=2.0.0",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "redis[hiredis]>=7.0.1",
    "rq>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.38.0",
    "xxhash>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.2",
]
